[package]
name = "gfx-compiler"
version = "0.1.0"
authors = ["Sergey Parshukov <codedby@bugman.me>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/jBugman/gfx"
description = "Go Functional Extensions compiler"
publish = false

[[bin]]
name = "gfx"
path = "src/main.rs"

[dependencies]
